applications/argocd/petclinic/plain-k8s/k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-plain
  namespace: argocd-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic-plain
  template:
    metadata:
      labels:
        app: spring-petclinic-plain
    spec:
      containers:
        - name: spring-petclinic-plain
          image: localhost:30000/petclinic-plain:1
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 9080
              scheme: HTTP
          volumeMounts:
            - name: messages
              mountPath: /tmp/messages
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 650Mi
      volumes:
        - name: messages
          configMap:
            name: messages
