applications/argocd/petclinic/plain-k8s/k8s/production/service.ftl.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-plain
  labels:
    app: spring-petclinic-plain
spec:
  type: <#if isRemote>LoadBalancer<#else>NodePort</#if>
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: spring-petclinic-plain
